--- a/.infrastructure/ingress/ingress.yml
+++ b/.infrastructure/ingress/ingress.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: todoapp-ingress
+  namespace: todoapp
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
@@ -9,16 +10,9 @@ spec:
   - http:
       paths:
       - pathType: Prefix
-        path: (/|$)(.*)
+        path: /(|$)(.*)
         backend:
           service:
-            name: kube2py-green-service
-            port:
-              number: 80
-      - pathType: Prefix
-        path: /api(/|$)(.*)
-        backend:
-          service:
-            name: kube2py-blue-service
+            name: todoapp-service
             port:
               number: 80
