--- a/cluster.yml
+++ b/cluster.yml
@@ -51,3 +51,11 @@ nodes:
   extraMounts:
     - hostPath: /tmp
       containerPath: /data
+- role: worker
+  extraMounts:
+    - hostPath: /tmp
+      containerPath: /data
+- role: worker
+  extraMounts:
+    - hostPath: /tmp
+      containerPath: /data
