--- a/.infrastructure/mysql/statefulSet.yml
+++ b/.infrastructure/mysql/statefulSet.yml
@@ -14,6 +14,29 @@ spec:
       labels:
         app: mysql
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - mysql
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - mysql
+              topologyKey: "kubernetes.io/hostname"
+      tolerations:
+        - key: "app"
+          operator: "Equal"
+          value: "mysql"
+          effect: "NoSchedule"
       containers:
       - name: mysql
         image: mysql:8.0
