--- a/cluster.yml
+++ b/cluster.yml
@@ -1,15 +1,11 @@
-# this config file contains all config fields with comments
-# NOTE: this is not a particularly useful config file
 apiVersion: kind.x-k8s.io/v1alpha4
 kind: Cluster
-# patch the generated kubeadm config with some extra settings
 kubeadmConfigPatches:
 - |
   apiVersion: kubelet.config.k8s.io/v1beta1
   kind: KubeletConfiguration
   evictionHard:
     nodefs.available: "0%"
-# patch it further using a JSON 6902 patch
 kubeadmConfigPatchesJSON6902:
 - group: kubeadm.k8s.io
   version: v1beta3
@@ -18,9 +14,8 @@ kubeadmConfigPatchesJSON6902:
     - op: add
       path: /apiServer/certSANs/-
       value: my-hostname
-# 2 control plane node and 2 workers
 nodes:
-# the control plane node config
+# Control-plane нода
 - role: control-plane
   extraMounts:
     - hostPath: /tmp
@@ -42,38 +37,48 @@ nodes:
   - containerPort: 443
     hostPort: 443
     protocol: TCP
-# the two workers
+
+# Worker-ноди для MySQL
 - role: worker
   extraMounts:
     - hostPath: /tmp
       containerPath: /data
   labels:
     app: mysql
+  taints:
+    - key: "app"
+      value: "mysql"
+      effect: "NoSchedule"
+
 - role: worker
   extraMounts:
     - hostPath: /tmp
       containerPath: /data
   labels:
     app: mysql
+  taints:
+    - key: "app"
+      value: "mysql"
+      effect: "NoSchedule"
+
+# Worker-ноди для TodoApp
 - role: worker
   extraMounts:
     - hostPath: /tmp
       containerPath: /data
   labels:
     app: todoapp
+
 - role: worker
   extraMounts:
     - hostPath: /tmp
       containerPath: /data
   labels:
     app: todoapp
+
 - role: worker
   extraMounts:
     - hostPath: /tmp
       containerPath: /data
   labels:
     app: todoapp
-- role: worker
-  extraMounts:
-    - hostPath: /tmp
-      containerPath: /data
